--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,7 @@ body{
 	text-align: center;
 }
 h1, h2, h3, h4, h5, h6{
-	font-family: montserrat;
+	font-family: helvetica;
 }
 .font-2{
 	font-family: 'josefin sans';
