--- a/css/tabs.css
+++ b/css/tabs.css
@@ -56,7 +56,7 @@
   background: rgba(0, 0, 0, 0.6);
   box-sizing: border-box;
   color: #fff;
-  font-family: "Open Sans";
+  font-family: "arial";
   list-style: none;
   margin: 0;
   text-decoration: none !important;
@@ -108,13 +108,13 @@
   position: relative;
 }
 .blog-card .description h1 {
-  font-family: "Roboto";
+  font-family: "arial";
   line-height: 1em;
   margin: 0 0 10px 0;
 }
 .blog-card .description h2 {
   color: #9b9b9b;
-  font-family: "Open Sans";
+  font-family: "arial";
   line-height: 1.2em;
   text-transform: uppercase;
   font-size: 1em;
