--- a/css/style.css
+++ b/css/style.css
@@ -17,16 +17,18 @@ body{
 	transform: translate3d(0, -100%, 0) scale(.75);
 	opacity: 0;
 }
-.hero-inner{
-		background-image: url('https://images.unsplash.com/photo-1442188950719-e8a67aea613a?fit=crop&fm=jpg&h=975&q=80&w=1925');
-		background-size: cover;
+/* .hero-inner{
+	background-image: url('https://images.unsplash.com/photo-1442188950719-e8a67aea613a?fit=crop&fm=jpg&h=975&q=80&w=1925');
+	background-size: cover;
 	background-position: center;
 	display: table;
 	width: 100%;
 	height: 100vh;
 	position: fixed;
 	top: 0;
-}
+} */
+
+
 .hero-title{
 	display: table-cell;
 	vertical-align: middle;
